# SimpleAutoFramer

./: .gitignore  .gitmodules  AUDIT.md  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  HotkeyListener.cpp  HotkeyListener.h  LICENSE  MIGRATION.md  MainWindow.cpp  MainWindow.h  ProfileManager.cpp  ProfileManager.h  README.md  SimpleAutoFrame.desktop  SimpleAutoFrame.spec  build_and_run.ps1  build_and_run.sh  config.h.in  hook-mediapipe.py  install.sh  main.cpp  main.py  main.spec  main_window.glade  main_window.glade~  nohup.out  requirements.txt  second.py  setup.sh  simpleautoframer.desktop
.github/workflows/: build.yml
data/: main_window.css  main_window.glade  main_window.glade~  simpleautoframer-uninstall
packaging/arch/: .SRCINFO  PKGBUILD  simpleautoframer.install  v4l2loopback-modules-load.conf  v4l2loopback.conf
src/: config.h.in  main.cpp  main_shortcut_integration_example.cpp.txt
src/camera/: CameraFactory.h  ICamera.h
src/camera/v4l2/: LinuxCamera.cpp  LinuxCamera.h
src/common/: ConfigSnapshot.h  Core.cpp  Core.h  ProfileManager.cpp  ProfileManager.h  VirtualCamera.h
src/gui/: GtkUi.cpp  GtkUi.h  HotkeyListener.cpp  MainWindow.cpp
src/ui/: IUi.h  IUiHotkeyListener.h  UiFactory.h
src/ui/gtk/: GtkUi.cpp  GtkUi.h  MainWindow.cpp  MainWindow.h  WaylandHotkeyListener.cpp  WaylandHotkeyListener.h  X11HotkeyListener.cpp  X11HotkeyListener.h
src/ui/shortcuts/: HyprlandBindsSync.cpp  HyprlandBindsSync.h  IShortcutManager.h  PortalShortcutManager.cpp  PortalShortcutManager.h  SafShortcutAdapter.cpp  SafShortcutAdapter.h  ShortcutManagerFactory.cpp  Win32ShortcutManager.cpp  Win32ShortcutManager.h  X11ShortcutManager.cpp  X11ShortcutManager.h
